--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
             <img src="images/fswLogo.png" alt="">
         </div>
         <ul>
-            <li><a href="./index.html" class="home active">HOME</a></li>
+            <li><a href="./index.html" class="home">HOME</a></li>
             <!-- <div class="home-cursor"></div> -->
-            <li><a href="about.html" class="about">ABOUT US</a></li>
+            <li><a href="about.html" class="about active">ABOUT US</a></li>
             <li><a href="#footer" class="home">CONTACT US</a></li>
             <!-- <div class="about-cursor"></div> -->
             <li>
@@ -51,19 +51,6 @@
                 <br>
                 The hackathon will start at 10 am on the 28th of April and continue for 24 hours, until 10 am on the 29th of April. Participants can work on any project they choose from the 10 problem statements provided. They can work individually or in teams of up to four people. Participants will receive extra points in the evaluation if the use of free softwares is included in their prototype. 
             </div>
-            
-            <!-- <div id="background-wrap"> -->
-                <!-- <div class="bubble x1"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x2"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x3"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x4"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x5"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x6"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x7"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x8"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x9"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-                <!-- <div class="bubble x10"><img src="images/logo.png" alt="" width="60%" height="60%"></div> -->
-            <!-- </div> -->
         </div>
         <div id="fsw">
             <div class="heading">
@@ -71,7 +58,18 @@
                 <h1>FSW</h1>
             </div>
             <div class="about">
-                Free Software Wing (FSW) is a lively technical student body of GRIET. FSW-GRIET is on a mission to create profound awareness about Free and Open Source Softwares in the careers of students and faculty of GRIET. Our student body conducts interactive events, insightful seminars, hands-on workshops and many more programs as part of the awareness campaign for Free and Open Source Softwares. We provide participants and attendees of our events with valuable knowledge that can be leveraged to advance their technological pursuits.
+                Free Software Wing (FSW) is a lively technical student body of GRIET. FSW-GRIET is on a mission to create profound awareness about Free and Open Source Softwares in the careers of students and faculty of GRIET. Our student body conducts interactive events, insightful seminars, hands-on workshops and many more programs as part of the awareness campaign for Free and Open Source Softwares. We provide participants and attendees of our events with valuable knowledge that can be leveraged to advance their technological pursuits.
+                <br><b>
+                Some of the main objectives of FSW are:
+                </b>
+                <br>
+                * To promote the use and benefits of FOSS among students and the community
+                <br>
+                * To encourage students to contribute to the FOSS community through coding and other activities
+                <br>
+                * To provide a platform for students to learn and collaborate on FOSS projects
+                <br>
+                * To foster a culture of innovation, collaboration, and creativity among students.
             </div>
         </div>
         <h1>VIVITSU COMMUNITY</h1>
