--- a/index.html
+++ b/index.html
@@ -469,9 +469,7 @@
                     <ul>
                         <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
                         <li><img src="images/reliance.png" alt="" style="background-color: white;" class="reliance"></li>
-                        <!-- <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
-                        <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
-                        <li><img src="images/axis.png" alt="" style="background-color: white;"></li> -->
+                        <li><img src="images/suntek.png" alt="" style="background-color: white;" class="suntek"></li>
                     </ul>
                 </div>
             </div>
