--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="#footer" class="home">CONTACT US</a></li>
             <!-- <div class="about-cursor"></div> -->
             <li>
-                <a href="https://unstop.com/o/qTPjOK9?lb=2ZvsJH5"  class= "active headRegister" target="_blank">REGISTER</a>
+                <a href="" class= "active headRegister" >REGISTER</a>
                 <div class="register-cursor"></div>
             </li>
         </ul>
